Work for the #801 - Fit SurveyJS Creator into given area - fixed pages editor width horizontal overflow

--- a/src/utils/vertical-container.scss
+++ b/src/utils/vertical-container.scss
@@ -36,3 +36,9 @@
 .svd-vertical-container__cell-content--scrollable {
     overflow: auto;
 }
+
+.svd_editors {
+    .svd-vertical-container {
+        table-layout: fixed;
+    }
+}
